# VECTORDB-CLIENT

./: .gitignore  CMakeLists.txt  README.md
src/: vector_store.cpp  vector_store.hpp
test/: CMakeLists.txt  test_vector_store.cpp
